Added some styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="app-container">
       <header>
         <div class="user-profile">
-          <div class="avatar">C</div>
+          <div class="avatar">I</div>
           <div class="welcome">
             <span>Welcome back,</span>
             <p>Immaculata</p>
